added advantages, about, gallery, contacts

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         </header>
         <div class="slider">
           <div class="container__fluid">
-            <div class="swiper-container">
+            <div class="swiper-container home__slider">
               <div class="swiper-wrapper">
                 <div
                   class="swiper-slide"
@@ -51,8 +51,8 @@
                       >Узнать подробности</a
                     >
                   </div>
-              </div>
-              <div
+                </div>
+                <div
                   class="swiper-slide"
                   style="background-image: url(images/slide-2.jpg);"
                 >
@@ -65,8 +65,8 @@
                       >Узнать подробности</a
                     >
                   </div>
-              </div>
-              <div
+                </div>
+                <div
                   class="swiper-slide"
                   style="background-image: url(images/slide-3.jpg);"
                 >
@@ -79,14 +79,13 @@
                       >Узнать подробности</a
                     >
                   </div>
-              </div>
-              <div
+                </div>
+                <div
                   class="swiper-slide"
                   style="background-image: url(images/slide-4.jpg);"
                 >
                   <div class="container">
-                    <div class="swiper-slide-title">Фундаменты
-                    </div>
+                    <div class="swiper-slide-title">Фундаменты</div>
                     <div class="swiper-slide-subtitle">
                       Заливка фундаментов, отмосток и их реставрация
                     </div>
@@ -94,12 +93,184 @@
                       >Узнать подробности</a
                     >
                   </div>
+                </div>
               </div>
-             
+              <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
         </div>
+        <section class="services">
+          <div class="container">
+            <div class="services__inner">
+              <div class="services__inner-item">
+                <div class="services__item-title">
+                  Профессионалы своего дела
+                </div>
+                <div class="services__item-text">
+                  Дом мечты должен соответствовать всем пожеланиям клиента. Мы
+                  готовы составить новый «план дома», учитывающий все
+                  индивидуальные пожелания заказчика, в том числе и самые
+                  сложно-выполнимые; Разнообразие материалов. Наша компания
+                  возводит здания из всех материалов, рекомендуемых для
+                  индивидуального жилого строительства: керамических и
+                  газосиликатных блоков, дерева, кирпича и клееного бруса…
+                  Качество – прежде всего. При строительстве применяются
+                  новейшие, качественные и экологически чистые материалы, что
+                  является залогом не только долгого срока эксплуатации. здания,
+                  но и крепкого здоровья всех его жильцов.
+                </div>
+              </div>
+              <div class="services__inner-item services__inner-item--right">
+                <div class="services__item-title">
+                  Наши услуги
+                </div>
+                <div class="services__item-text">
+                  <ul>
+                    <li>
+                      Строительство и рестоврация домов, дач, бань под ключ
+                    </li>
+                    <li>Фундамент любого вида, отмостки и их реставрация</li>
+                    <li>Кровельные работы любого вида из любых материалов</li>
+                    <li>Укладка кирпича, газоблоков и пеноблоков и тд.</li>
+                    <li>Строительство мансард, террас, беседок, сараев</li>
+                    <li>Заборы любого вида из любых материалов</li>
+                    <li>Установка каминов. барбекюшниц, печей</li>
+                    <li>Внешняя и внутренняя отделка любой сложности</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="advantages">
+          <div class="container__fluid">
+            <div class="advantages__wrapper">
+              <div class="container">
+                <div class="advantages__inner">
+                  <div class="advantages__inner-item">
+                    <div class="advantages__item-img">
+                      <img src="images/icons/lamp.png" alt="" />
+                    </div>
+                    <div class="advantages__item-info">Больше 10 лет опыта</div>
+                  </div>
+                  <div class="advantages__inner-item">
+                    <div class="advantages__item-img">
+                      <img src="images/icons/helmet.png" alt="" />
+                    </div>
+                    <div class="advantages__item-info">
+                      500+ клиентов довольны нами
+                    </div>
+                  </div>
+                  <div class="advantages__inner-item">
+                    <div class="advantages__item-img">
+                      <img src="images/icons/crane.png" alt="" />
+                    </div>
+                    <div class="advantages__item-info">
+                      Десятки готовых проекты
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="about">
+          <div class="container">
+            <div class="about__inner">
+              <div class="about__inner-item">
+                <div class="about__item-title">
+                  О нас
+                </div>
+                <div class="about__item-text">
+                  Наша строительная бригада на протяжении долгих лет
+                  осуществляет проектирование и строительство домов во
+                  Владимирской области. Мы будем сопровождать Вас на всех
+                  этапах: при выборе участка под будущее жилище, разработке
+                  проекта и строительстве домов под ключ. Используются
+                  качественные материалы известных заводов-изготовителей. Все
+                  услуги проводятся в сжатые сроки, что не влияет на качество
+                  выполняемых работ. Мы использует новейшие технологические
+                  разработки, что обеспечивает высокое качество услуг.
+                </div>
+              </div>
+              <div class="about__inner-item about__inner-item--right">
+                <div class="about__item-title">
+                  Галерея
+                </div>
+                <div class="swiper-container gallery__slider">
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-01.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-02.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-03.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-04.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-05.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/gallery/slide-06.jpg" alt="" />
+                    </div>
+                  </div>
+                  <!-- If we need navigation buttons -->
+
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="contacts">
+          <div class="container__fluid">
+            <div class="map" style="position: relative; overflow: hidden;">
+              <a
+                href="https://yandex.ru/maps/192/vladimir/?utm_medium=mapframe&utm_source=maps"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 0px;
+                "
+                >Владимир</a
+              ><a
+                href="https://yandex.ru/maps/192/vladimir/?ll=40.422683%2C56.134844&source=wizgeo&utm_medium=mapframe&utm_source=maps&z=11"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 14px;
+                "
+                >Владимир — Яндекс.Карты</a
+              ><iframe
+                src="https://yandex.ru/map-widget/v1/-/CCQqJAAS~B"
+                width="1830"
+                height="700"
+                frameborder="0"
+                allowfullscreen="true"
+                style="position: relative;"
+              ></iframe>
+            </div>
+            <div class="container">
+              <div class="contacts__box">
+                <div class="contacts__box-title">КОНТАКТЫ</div>
+                <div class="contacts__box-tel">+7 910 188 62 02</div>
+                <div class="contacts__box-location">
+                  Владимирская область <span>г. Владимир</span>
+                </div>
+                <div class="contacts__box-text">Выезд на осмотр бесплатный</div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
       <div class="footer">
         <div class="container">
@@ -109,7 +280,6 @@
         </div>
       </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
